Save notes with archive and publish and use standard palls

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelsList.cshtml
@@ -33,6 +33,8 @@
 {
 	ReturnUrl = "/Admin/Hotels",
 	ReturnText = ConstReturnText.ReturnToDash,
+	// OnclickArchive = "window.mshMethods.archiveHotels()",
+	//OnclickPublish = "window.mshMethods.publishHotels()"
 })
 
 @await Html.PartialAsync("Admin/_AdminErrorBlock", "")
