--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
@@ -13,7 +13,7 @@
 	UseHotel = true,
 	HotelCode = @hotelCode,
 	Code = "",
-	EditType = "item-options"
+	EditType = "item-dates"
 })
 
 <div class="text-center">
@@ -29,7 +29,7 @@
 
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = "/Admin/Hotels/",
+	ReturnUrl = "/Admin/Hotels/HotelsList",
 	ReturnText = ConstReturnText.ReturnToList,
 	ButtonType = SaveReturnTypes.EventListener,
 	SaveOperation = "save-dates"
