Updates for Specials

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialsList.cshtml
@@ -14,6 +14,8 @@
 
 @await Html.PartialAsync("Hotels/_HiddenHotelInputs", @Model as HotelListVm)
 
+<input type="hidden" id="edit-type" value="specials-list" />
+
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
 	<p>Hotel Specials. Click for more information: <info-icon name="info-specials" /> </p>
