--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
@@ -99,6 +99,13 @@
 						<input asp-for="WarningText" class="form-control " />
 						<span asp-validation-for="WarningText" class="text-danger"></span>
 					</div>
+					
+					<div class="form-group mb-3">
+						<label asp-for="DisabledText" class="control-label"></label>&nbsp;
+						<info-icon name="info-disabled-text" />
+						<input asp-for="DisabledText" class="form-control " />
+						<span asp-validation-for="DisabledText" class="text-danger"></span>
+					</div>
 
 
 					<div class="form-group mb-3">
