--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEditInfo.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEditInfo.cshtml
@@ -31,15 +31,24 @@
 		<p>
 			The Special is available only for adults.
 		</p>
+		<p>
+			You may want to add Disabled Text to explain why children and infants are not allowed to use this special.
+		</p>
 	</div>
 </div>
 
 <div data-info-for="info-item-type">
-	<span>Enabled</span>
+	<span>Type</span>
 	<div>
 		<p>
 			Select the type of Special.
 		</p>
+		<ul>
+			<li>Text - </li>
+			<li>Checkbox - The user selects the special by setting a checkbox.</li>
+			<li>Select - The user uses a dropdown to select from a number of options.</li>
+			<li>FreeText - The user enters free-form text to explain their special requirements.</li>
+		</ul>
 	</div>
 </div>
 
