--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountsList.cshtml
@@ -17,6 +17,8 @@
 
 @await Html.PartialAsync("Hotels/_HiddenHotelInputs", @Model as HotelListVm)
 
+<input type="hidden" id="edit-type" value="discounts-list" />
+
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
 	<p>Hotel Discounts. Click for more information: <info-icon name="info-discounts" /> </p>
