--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanSortList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanSortList.cshtml
@@ -19,7 +19,7 @@
 
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
-	<p>Determine what order in which rate plans are presented to the user in the results page.</p>
+	<p>Determine the order in which rate plans are presented to the user in the results page.</p>
 </div>
 
 @await Component.InvokeAsync("AdminHotelSelect", @Model.HotelCode)
