Extract BaseAdminController, DiscountsController, and adjust scripts

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountEditDatesBook.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Discounts/DiscountEditDatesBook.cshtml
@@ -1,7 +1,8 @@
 ﻿@using Msh.Admin.Models.Const
 @using Msh.WebApp.Areas.Admin.Models
+@using Msh.WebApp.TagHelpers
 @{
-	var title = "Discount Offer Dates List";
+	var title = "Discount Book Dates List";
 	ViewData["Title"] = title;
 	var itemCode = ViewBag.Code as string;
 	var hotelCode = ViewBag.HotelCode as string;
@@ -11,10 +12,7 @@
 
 @await Html.PartialAsync("_HotelCodeHiddenFields", new HotelCodeHiddenFieldsVm
 {
-	UseHotel = true,
-	HotelCode = @hotelCode,
-	Code = itemCode,
-	EditType = "item-dates"
+	UseHotel = true, HotelCode = @hotelCode, Code = itemCode, EditType = "item-dates"
 })
 
 <div class="text-center">
@@ -30,21 +28,22 @@
 
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = $"/Admin/Hotels/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnUrl = $"/Admin/discounts/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
 	ButtonType = SaveReturnTypes.EventListener,
 	SaveOperation = "save-dates"
 })
 
+
 @section InfoItems {
 
 	<div data-info-for="info-discount-dates">
-		<span>Discounts Offer Dates</span>
+		<span>Discounts Book Dates</span>
 		<div>
-			<p>A set of date ranges used to prohibit or allow Discounts.</p>
-			<p>Prohibit date ranges might be used for discounts that are generally available but occasionally are not.</p>
-			<p>Allow date ranges might be used for discounts that are seasonal and available for a short time.</p>
-			<p>If no dates are supplied the discount will be available all the time, though that may also be determined by Opera for some discount types.</p>
+			<p>A set of date ranges used to prohibit or allow when a customer can use Discounts.</p>
+			<p>Prohibit date ranges might be used for times you want to prevent users using the discount - perhaps when a discount won't be active for a while.</p>
+			<p>Allow date ranges might be used for times when you want to make booking a discount available during a short period, such as promotion.</p>
+			<p>If no dates are supplied the discount can be booked any time, though that may also be determined by Opera for some discount types.</p>
 			<p>Editing the date list: <info-icon name="info-date-range-list"/></p>
 		</div>
 	</div>
@@ -55,6 +54,6 @@
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
-	<script src="~/js/admin/hotels/msh-admin-discounts-offerdates.js"></script>
+	<script src="~/js/admin/hotels/msh-admin-discounts-bookdates.js"></script>
 }
 
