--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_TableCommonCells.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_TableCommonCells.cshtml
@@ -37,7 +37,7 @@ Add cells for common list actions
 	<td style="width:90px;">
 		<div class="cell-outer">
 			<div class="cell-inner">
-				<a asp-controller="Hotels" asp-action="@Model.EditAction" asp-route-code="@Model.Code" asp-route-hotelCode="@Model.HotelCode">
+				<a asp-controller="@Model.EditController" asp-action="@Model.EditAction" asp-route-code="@Model.Code" asp-route-hotelCode="@Model.HotelCode">
 					<i class="fa-solid fa-pen-to-square"></i>
 				</a>
 			</div>
