--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Extras/ExtrasList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Extras/ExtrasList.cshtml
@@ -72,6 +72,7 @@
 }
 
 @section Scripts{
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/admin/msh-admin-palls.js"></script>
