--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
+@using Msh.Admin.Models.Const
 @using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.Models.Admin
 @using Msh.WebApp.TagHelpers
@@ -81,10 +82,11 @@
 
 			@await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 			{
-				ReturnUrl = "/Admin/Hotels/ExtrasList",
+				ReturnUrl = $"{AdminRoutes.Extras}/ExtrasList",
 				ReturnText = ConstReturnText.ReturnToList,
 				ButtonType = SaveReturnTypes.EventListener,
-				SaveOperation = "submit"
+				SaveOperation = "submit",
+				
 			})
 
 		</form>
