--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Specials/SpecialEditOptions.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Specials/SpecialEditOptions.cshtml
@@ -1,8 +1,7 @@
 ﻿@using Msh.Admin.Models.Const
 @using Msh.WebApp.Areas.Admin.Models
-@using Msh.WebApp.TagHelpers
 @{
-	var title = "Special Dates List";
+	var title = "Special Options List";
 	ViewData["Title"] = title;
 	var itemCode = ViewBag.Code as string;
 	var hotelCode = ViewBag.HotelCode as string;
@@ -15,12 +14,12 @@
 	UseHotel = true,
 	HotelCode = @hotelCode,
 	Code = itemCode,
-	EditType = "item-dates"
+	EditType = "item-options"
 })
 
 <div class="text-center">
 	<h1 class="display-6">@title for @itemCode in @hotelCode</h1>
-	<p>For more information click <info-icon name="info-special-dates" /></p>
+	<p>For more information click <info-icon name="info-special-options" /></p>
 </div>
 
 <div class="row">
@@ -29,19 +28,19 @@
 	</div>
 </div>
 
-
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
-	ReturnText = ConstReturnText.ReturnToDash,
+	ReturnUrl = $"{AdminRoutes.Specials}/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
 	ButtonType = SaveReturnTypes.EventListener,
-	SaveOperation = "save-dates"
+	SaveOperation = "save-options"
 })
 
 
 @section InfoItems {
-	<div data-info-for="info-special-dates">
-		<span>Special Dates</span>
+
+	<div data-info-for="info-special-options">
+		<span>Special Options</span>
 		<div>
 
 		</div>
@@ -49,9 +48,11 @@
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
-	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
-	<script src="~/js/admin/hotels/msh-admin-specials.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
+	<script src="~/js/admin/hotels/msh-admin-specials-options.js"></script>
+	
 }
 
