--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Specials/SpecialEditRatePlans.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Specials/SpecialEditRatePlans.cshtml
@@ -1,7 +1,8 @@
-﻿@using Msh.WebApp.Areas.Admin.Models
+﻿@using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
 @{
-	var title = "Disabled Room Types";
+	var title = "Disabled Rate Plans";
 	ViewData["Title"] = title;
 	var itemCode = ViewBag.Code as string;
 	var hotelCode = ViewBag.HotelCode as string;
@@ -14,14 +15,13 @@
 	Code = itemCode,
 	EditType = "item-options"
 })
-<input type="hidden" id="save-api-url" value="/api/specialsapi/SpecialRoomTypesSave" />
+<input type="hidden" id="save-api-url" value="/api/specialsapi/SpecialRatePlansSave" />
 
 <div class="text-center">
 	<h1 class="display-6">@title for Special  @itemCode in @hotelCode</h1>
-	<p>This Special, @itemCode, cannot be used for the room types selected here.</p>
-	<p>For more information click <info-icon name="info-special-room-types" /></p>
+	<p>This Special, @itemCode, cannot be used for the rate plans selected here.</p>
+	<p>For more information click <info-icon name="info-special-rate-plans" /></p>
 </div>
-
 
 <div class="row">
 	<div class="col-12" id="table-target">
@@ -33,28 +33,30 @@
 
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
+	ReturnUrl = $"{AdminRoutes.Specials}/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
 	ButtonType = SaveReturnTypes.OnclickMethod,
 	SaveOperation = "window.mshMethods.saveCodeCheckList()"
 })
 
+
 @section InfoItems {
 
-	<div data-info-for="info-special-room-types">
+	<div data-info-for="info-special-rate-plans">
 		<span>Disabled Room Types</span>
 		<div>
 			<p>
-				Select the room types for which this special cannot be used.
+				Select the rate plans for which this room type cannot be used.
 			</p>
 		</div>
 	</div>
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-check-codes-select.js"></script>
 	
 }
-
