--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/RatePlans/RatePlanAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/RatePlans/RatePlanAdd.cshtml
@@ -2,19 +2,19 @@
 
 @model Msh.HotelCache.Models.RatePlans.RoomRatePlan
 @{
-	ViewData["Title"] = "Edit Rate Plan";
+	ViewData["Title"] = "Add Rate Plan";
 
 	var hotelCode = ViewBag.HotelCode;
 
     ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "RoomRatePlan",
-	    ReturnUrl = $"/admin/hotels/RatePlansList?hotelCode={hotelCode}",
-	    ReturnText = "Rate Plan List",
-	    FormAction = "RatePlanEdit",
-		KeyPropertyLabel = "",
-		KeyPropertyName = "",
-		KeyPropertyValue = Model.Code
+	    ReturnUrl = "/admin/hotels/RatePlansList?hotelCode=" + hotelCode,
+	    ReturnText = "Rate Plans List",
+	    KeyPropertyLabel = "Rate Plans Code",
+	    KeyPropertyName = "RatePlanCode",
+	    KeyPropertyValue = Model.Code,
+	    FormAction = "RatePlanAdd"
     };
 }
 
@@ -22,14 +22,14 @@
 
 @section InfoItems
 {
-	@await Html.PartialAsync("Hotels/_RatePlanEditInfo", "Rate Plan Edit")
+	@await Html.PartialAsync("Hotels/_RatePlanEditInfo", "Rate Plan Add")
 }
 
-
-
 @section Scripts {
+	<script src="~/js/mshapp/msh-routes.js"></script>
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/mshapp/msh-itemdatesservice.js"></script>
 	<script src="~/js/Admin/Hotels/msh-admin-rateplans.js"></script>
 }
